Add the right social media icon

--- a/styles.css
+++ b/styles.css
@@ -1359,6 +1359,7 @@ footer::before {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
 }
 
 .footer-social a:hover {
